syntax = "proto3";

option java_multiple_files= true;
option java_package = "proto.service.proto";
option java_outer_classname = "userProtoService";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "user.proto";
import "verifyEmail.proto";
import "getUser.proto";

service AuthService {
  rpc SayHelloUser(sayHelloUserRequest) returns (sayHelloUserResponse){}
  rpc LoginUser(LoginRequest) returns (LoginResponse){}
}

service RegisterService {
  rpc RegisterUser(SignupRequest) returns (SignupResponse){}
}

service VerifyEmailService {
  rpc RequestOtp(RequestOtpRequest) returns (RequestOtpResponse){}
  rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse){}
}

service GetUserService {
  rpc GetUserByUniqueField(GetUserByUniqueFieldRequest) returns (User){}
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse){}
}